change style of the webpage

--- a/webCrawler/views/scraper.ejs
+++ b/webCrawler/views/scraper.ejs
@@ -6,17 +6,28 @@
         <link rel="stylesheet" type="text/css" href="public/css/style.css"/>
     </head>
     <body>
-        <h1>Web Crawler</h1>
+        <h1><strong>Web Crawler</strong></h1>
         
+        <h2> Indexation des urls</h2>
         <form action="/scraper/url/" method="post">
             <p>
                 <label for="scraper">Quel site ?</label>
-                <input type="text" name="scraper" id="scraper" autofocus />
+                <input type="text" name="scraper" id="scraper" placeholder="url" autofocus/>
                 <input type="submit" />
             </p>
         </form>
+        </br>
+        <h2>Base de données</h2>
+         <form action="/scraper/findData/" method="post">
+            <p>
+                <label for="keyWord">Rechercher dans la BD :</label>
+                <input type="text" name="keyWord" id="keyWord" placeholder="mot clé"/>
+                <input type="submit" />
+            </p>
+        </form>
+        <input id="showDB" type="button" value="Afficher toutes les urls indéxées" name="showDB" onclick="location.href='/scraper/showDatabse'">
+        <input id="removeDB" type="button" value="Supprimer toutes les urls" name="removeDB" onclick="location.href='/scraper/removeDatabase'">
 
-        </br><input id="showDB" type="button" value="Afficher les urls récupérés" name="showDB" onclick="location.href='/scraper/showDatabse'">
-        <input id="removeDB" type="button" value="Supprimer les urls de la BD" name="removeDB" onclick="location.href='/scraper/removeDatabase'">
+       
     </body>
 </html>
